--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>Eğitim Geçmişim</h2>
       <ul>
         <li>Cezeri Lisesi</li>
-        <li>Aksray Üniversitesi</li>
+        <li>Aksaray Üniversitesi</li>
         <li>BilgeAdam Front-End Kursu</li>
         
       </ul>
